<resources>
    <string name="app_name">What to Eat Today</string>
    <string name="action_settings">Settings</string>
    <string name="icon_plus_circle">&#xf055;</string>
    <string name="icon_heart">&#xf004;</string>
    <string name="icon_location">&#xf124;</string>
    <string name="icon_comment">&#xf0e5;</string>
    <string name="icon_camera">&#xf030;</string>
    <string name="icon_star">&#xf005;</string>
    <string name="icon_search">&#xf002;</string>
    <string name="icon_back">&#xf100;</string>
    <string name="facebook_app_id">1211429772224945</string>
    <string name="fb_login_protocol_scheme">fb1211429772224945</string>
</resources>
