<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:padding="4dp"
    android:orientation="vertical"
    android:background="#00000000">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cv"
        card_view:cardBackgroundColor="#fff"
        card_view:cardElevation="3dp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="180dp"
                android:id="@+id/imageAva"
                android:layout_marginTop="-28dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtName"
                android:text="NAME"
                android:layout_toRightOf="@+id/imageAva"
                android:layout_marginLeft="6dp"
                android:textColor="#000"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/txtAddress"
                android:text="Address"
		        android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtName"
                android:layout_toRightOf="@+id/imageAva"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="4dp"/>

            <TextView
                android:id="@+id/txtCountry"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtAddress"
                android:layout_toRightOf="@+id/imageAva"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/btnMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageAva"
                android:clickable="true"
                android:textColor="#F44336"
                android:textStyle="bold"
                android:text="Menu"
                android:background="#00000000"
                android:textSize="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtPrice"
                android:text="Price"
                android:layout_below="@+id/txtTimeOpen"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnMenu"
                android:id="@+id/txtTimeOpen"
                android:text="Open Time"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtPrice"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:id="@+id/txtStatus"
                android:text="Status"/>

            <LinearLayout
                android:id="@+id/layoutImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/txtStatus"
                android:layout_marginTop="5dp"
                android:gravity="left">

                <HorizontalScrollView
                    android:id="@+id/horizontal_scroll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:id="@+id/listimage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >
                    </LinearLayout>

                </HorizontalScrollView>

            </LinearLayout>

            <ToggleButton
                android:id="@+id/btnLove"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="12dp"
                android:layout_below="@+id/layoutImage"
                style="?android:attr/buttonStyleSmall"
                android:background="@drawable/toggle_selector"
                android:textOff=""
                android:textOn=""/>

            <Button
                android:id="@+id/btnLocation"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_toRightOf="@+id/txtNumCamera"
                android:layout_marginLeft="5dp"
                android:layout_below="@+id/layoutImage"
                android:layout_marginTop="12dp"
                style="?android:attr/buttonStyleSmall"
                android:background="@drawable/ic_location_on_black_24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/btnCmt"
                android:layout_below="@+id/layoutImage"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="-6dp"
                android:id="@+id/txtNumCmt"/>

            <Button
                android:id="@+id/btnCmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/btnLove"
                android:layout_below="@+id/layoutImage"
                style="?android:attr/buttonStyleSmall"
                android:text="@string/icon_comment"
                android:layout_marginLeft="5dp"
                android:background="#00000000"
                android:textColor="#000"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/btnCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/txtNumCmt"
                android:layout_below="@+id/layoutImage"
                style="?android:attr/buttonStyleSmall"
                android:text="@string/icon_camera"
                android:layout_marginLeft="5dp"
                android:background="#00000000"
                android:textColor="#000"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/btnCamera"
                android:layout_below="@+id/layoutImage"
                android:id="@+id/txtNumCamera"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="-6dp"/>

            <Button
                android:id="@+id/btnStar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/txtRate"
                android:layout_below="@+id/layoutImage"
                style="?android:attr/buttonStyleSmall"
                android:background="#00000000"
                android:text="@string/icon_star"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtRate"
                android:layout_below="@+id/layoutImage"
                android:layout_toRightOf="@id/btnLocation"
                android:textSize="20sp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:textColor="#0BAD26"/>


        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>